src/test/ui/feature-gate-static-nobundle.stderr
error[E0658]: kind="static-nobundle" is feature gated (see issue #37403)
  --> $DIR/feature-gate-static-nobundle.rs:11:1
   |
LL | #[link(name="foo", kind="static-nobundle")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(static_nobundle)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
